--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScheduleYouLater</title>
-
-    <link rel="stylesheet" href="./css/styles.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    
-    <div id="container">
+    <div class="header">
+      <a href="#default" class="logo">ScheduleYouLater</a>
+      <div class="header-right">
+        <a href="#day">Day</a>
+        <a class="active" href="#month">Month</a>
+        <a href="#year">Year</a>
+        <a href="#decade">Decade</a>
+      </div>
+    </div>
+    <div id="container" style="margin:auto">
       <div id="header">
         <div id="monthDisplay"></div>
         <div>
@@ -52,6 +60,7 @@
 
     <div id="modalBackDrop"></div>
 
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
