Added reccuring event functionality

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       <div id="header">
         <div id="monthDisplay"></div>
         <div>
+          <button id="AddReccuringEvents">Add Reccuring Events</button>
           <button id="backButton">Back</button>
           <button id="nextButton">Next</button>
         </div>
@@ -56,6 +57,16 @@
 
       <button id="deleteButton">Delete</button>
       <button id="closeButton">Close</button>
+    </div>
+    
+    <div id="reccuringEventsModal">
+      <h2>New Events for every day</h2>
+
+      <input id="eventDayRec" placeholder="Monday" />
+      <input id="eventTitleInputRec" placeholder="Event Title" />
+
+      <button id="saveButtonReccuringEvents">Save</button>
+      <button id="cancelButtonReccuringEvents">Close</button>
     </div>
 
     <div id="modalBackDrop"></div>
