--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
 
       <button id="deleteButton">Delete</button>
       <button id="closeButton">Close</button>
+      <button id="notifyButton">Notify Me!</button>
     </div>
     
     <div id="reccuringEventsModal">
@@ -69,9 +70,20 @@
       <button id="cancelButtonReccuringEvents">Close</button>
     </div>
 
+    <div id="emailEventsModal">
+      <h2>Please enter your email address and the body of the text you want to send</h2>
+
+      <input id="userEmail" placeholder="Enter your email address" />
+      <input id="emailBody" placeholder="Enter the body of the email" />
+
+      <button id="saveButtonEmail">Save</button>
+      <button id="cancelButtonEmail">Close</button>
+    </div>
+
     <div id="modalBackDrop"></div>
 
     <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="js/email.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
   </body>
 </html>
